# keychat-protocol

./: .gitignore  Cargo.toml  MENTAL_MODEL.md  README.md  SPEC.md  keychat-protocol-spec-v2.md  libkeychat-guide.md
.github/workflows/: release-cli.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-03-libkeychat-audit-fixes.md  2026-06-17-multi-identity.md
keychat-agent-skill/: SKILL.md
keychat-agent-skill/scripts/: bridge.sh
keychat-app-core/: Cargo.toml
keychat-app-core/src/: app_client.rs  app_storage.rs  data_store.rs  delegate.rs  event_loop.rs  friend_request.rs  group.rs  lib.rs  media.rs  messaging.rs  mls_group.rs  relay_tracker.rs  types.rs  v1_compat.rs  v1_migration.rs
keychat-app-core/tests/: v1_migration_test.rs
keychat-app-sdk/: Cargo.toml
keychat-app-sdk/src/: address.rs  client.rs  data_store.rs  error.rs  friend_request.rs  group.rs  lib.rs  media.rs  messaging.rs  types.rs
keychat-app-sdk/tests/: integration_test.rs
keychat-channel-plugin/: README.md  package-lock.json  package.json  server.ts
keychat-channel-plugin/skills/access/: SKILL.md
keychat-channel-plugin/skills/configure/: SKILL.md
keychat-claude-mcp/: .mcp.json  README.md  package-lock.json  package.json  server.ts
keychat-claude-mcp/.claude-plugin/: plugin.json
keychat-claude-mcp/skills/configure/: SKILL.md
keychat-cli/: Cargo.toml  README.md
keychat-cli-agent/: Cargo.toml  SECRET-STORAGE-AUDIT.md
keychat-cli-agent/src/: chat.rs  daemon.rs  groups.rs  main.rs  media_cmd.rs  multi_agent.rs  multi_daemon.rs  state.rs  ui.rs
keychat-cli-human/: Cargo.toml
keychat-cli-human/src/: app.rs  chat.rs  commands.rs  config.rs  groups.rs  main.rs  payment_cmd.rs  state.rs
keychat-cli/adapters/: README.md
keychat-cli/adapters/claw/: SKILL.md  bridge.sh
keychat-cli/adapters/common/: keychat-client.sh  keychat-client.ts
keychat-cli/adapters/mcp/: package.json  server.ts  tsconfig.json
keychat-cli/adapters/openclaw-plugin/: README.md  channel.ts  index.ts  openclaw.plugin.json  package.json
keychat-cli/adapters/openclaw-plugin/scripts/: postinstall.sh
keychat-cli/adapters/openclaw-plugin/skills/keychat-cli/: SKILL.md
keychat-cli/adapters/setup/: setup-claude-code.sh  setup-codex.sh  setup-gemini.sh  setup-openclaw.sh  setup-pi.sh
keychat-cli/adapters/tests/: test-adapters.sh
keychat-cli/scripts/: setup-claude-code.sh  setup-openclaw.sh
keychat-cli/scripts/bridges/: README.md  openclaw-bridge.sh
keychat-cli/src/: agent_config.rs  agent_daemon.rs  agent_policy.rs  commands.rs  daemon.rs  lib.rs  main.rs  repl.rs  secrets.rs  tui.rs
keychat-cli/tests/: integration_test.rs
keychat-uniffi/: Cargo.toml  build-xcframework.sh  uniffi.toml
keychat-uniffi/src/: address.rs  app_storage.rs  client.rs  data_store.rs  error.rs  event_loop.rs  friend_request.rs  group.rs  lib.rs  media.rs  messaging.rs  mls_group.rs  relay_tracker.rs  types.rs
keychat-uniffi/tests/: comprehensive_e2e.rs  integration_test.rs
keychat-wallet/: Cargo.toml
keychat-wallet-uniffi/: Cargo.toml  uniffi.toml
keychat-wallet-uniffi/src/: error.rs  lib.rs  wallet.rs
keychat-wallet/src/: cashu.rs  error.rs  lib.rs  manager.rs  provider.rs  types.rs
libkeychat/: Cargo.toml  GUIDE.md  NIP-ESTAMP.md  README.md  SPEC.md
libkeychat-ffi/: cbindgen.toml  ffi.rs
libkeychat-interop/: Cargo.toml
libkeychat-interop/src/: main.rs
libkeychat-interop/tests/: interop.rs
libkeychat/docs/: client-guide.md
libkeychat/examples/: client_interop_test.rs  echo_bot.rs  group_interop_test.rs  group_mgmt_test.rs  interop_test.rs  media_recv_test.rs  mls_relay_test.rs  send_once.rs  test_ffi  test_ffi.c
libkeychat/include/: libkeychat.h
libkeychat/src/: address.rs  chat.rs  error.rs  ffi.rs  friend_request.rs  giftwrap.rs  group.rs  identity.rs  lib.rs  media.rs  message.rs  mls.rs  mls_provider.rs  nicks.rs  nip44.rs  orchestrator.rs  payment.rs  persistent_signal_store.rs  session.rs  signal_keys.rs  signal_session.rs  signal_store.rs  stamp.rs  storage.rs  transport.rs
libkeychat/src/client/: mod.rs  types.rs
libkeychat/src/group/: mod.rs  types.rs
libkeychat/src/identity/: bech32.rs  mod.rs
libkeychat/src/media/: mod.rs  types.rs
libkeychat/src/mls/: group.rs  mod.rs  transport.rs  types.rs
libkeychat/src/nostr/: mod.rs  nip04.rs  nip44.rs  nip59.rs
libkeychat/src/protocol/: address.rs  hello.rs  message_types.rs  messaging.rs  mod.rs
libkeychat/src/signal/: keys.rs  mod.rs  session_store.rs  store.rs
libkeychat/src/stamp/: mod.rs
libkeychat/src/storage/: memory.rs  mod.rs  sqlite.rs
libkeychat/src/transport/: mod.rs  relay.rs
libkeychat/src/tui/: app.rs  event.rs  mod.rs  ui.rs
libkeychat/tests/: client_persistence_tests.rs  full_flow.rs  identity_tests.rs  integration.rs  m2_tests.rs  m4_mls_tests.rs  m5_group_tests.rs  signal_tests.rs
nips/: nip-MLS.md  nip-estamp.md  nip-mls.md  nip-signal.md
patches/cdk-sqlite/: Cargo.toml
scripts/: release-cli.sh
