[workspace]
members = [
    "libkeychat",
    "keychat-app-core",
    "keychat-uniffi",
    "keychat-cli",
    "keychat-wallet",
    "keychat-wallet-uniffi",
]
exclude = [
    "libsignal-local",
    "libsignal-protocol-patch",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr = { version = "0.37", features = ["nip44", "nip06"] }
# vendored-openssl so Android NDK cross-compile works without a system OpenSSL;
# iOS is unaffected since the bundled build is self-contained on both platforms.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
bip39 = { version = "2", features = ["rand"] }
bitcoin = { version = "0.32", features = ["serde"] }
cdk = { version = "0.15.1", default-features = false, features = ["wallet"] }
cdk-common = { version = "0.15.1", default-features = false }
cdk-sqlite = { version = "0.15.1", default-features = false, features = ["wallet"] }

[patch.crates-io]
# Patch cdk-sqlite to use rusqlite 0.32 (same as the rest of the workspace)
# to avoid the `links = "sqlite3"` conflict between rusqlite 0.31 and 0.32.
#
# The upstream crate on crates.io (0.15.1) pins rusqlite 0.31; two rusqlite
# majors cannot coexist in one binary because both declare
# `links = "sqlite3"`. The vendored copy under `patches/cdk-sqlite/` is a
# byte-for-byte copy with rusqlite bumped to 0.32 — see the header of
# `patches/cdk-sqlite/Cargo.toml` for the full rationale.
#
# Remove this patch entry (and the `patches/cdk-sqlite/` directory) once
# upstream cdk-sqlite publishes a release that depends on rusqlite >= 0.32.
cdk-sqlite = { path = "patches/cdk-sqlite" }

# Patch libsignal-protocol to Keychat's fork (branch `kc-x3dh-compat`),
# which adds `PreKeyBundle::new_without_kyber()` for X3DH-only (v1) peer
# compatibility, plus X3DH HKDF label and session-version fixes. The
# fork lives at https://github.com/keychat-io/libsignal; we pin a specific
# rev to avoid silent upstream changes. See SPEC.md §6 (v1↔v1.5 interop)
# for the protocol rationale.
[patch."https://github.com/signalapp/libsignal.git"]
libsignal-protocol = { git = "https://github.com/keychat-io/libsignal.git", rev = "d0848d0b055716e9c37954b85e71d5e5878550c7" }
