[package]
name = "keychat-app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libkeychat = { path = "../libkeychat", features = ["storage"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
base64 = "0.22"
nostr = "0.37"
