[package]
name = "keychat-app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libkeychat = { path = "../libkeychat" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
nostr = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
