[package]
name = "keychat-app-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
uniffi-export = ["dep:uniffi"]

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"], optional = true }
libkeychat = { path = "../libkeychat", features = ["storage", "mls"] }
nostr = "0.37"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
