[package]
name = "keychat-agent"
version = "0.1.0"
edition = "2021"
description = "Keychat v2 agent daemon — HTTP API + multi-agent management"

[dependencies]
libkeychat = { path = "/Users/kc/libkeychat-v2" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
nostr = { version = "0.37", features = ["nip44"] }
nostr-sdk = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
libsignal-protocol = { path = "/Users/kc/.cargo/git/checkouts/libsignal-d53efd7b5b78aacd/f9f0a47/rust/protocol" }
dirs = "6"
colored = "2"
chrono = "0.4"
rand = "0.8"
tls_codec = { version = "0.4", features = ["derive", "serde"] }
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
keyring = { version = "3.6", features = ["apple-native", "linux-native"] }
