[package]
name = "keychat-cli"
version = "0.1.0"
edition = "2021"
description = "Keychat unified CLI — interactive REPL and HTTP daemon modes"

[lib]
name = "keychat_cli"
path = "src/lib.rs"

[[bin]]
name = "keychat"
path = "src/main.rs"

[dependencies]
keychat-uniffi = { path = "../keychat-uniffi" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = "0.8"
rustyline = "14"
colored = "2"
chrono = "0.4"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3.6", features = ["apple-native", "linux-native"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
qrcode = "0.14"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
