[package]
name = "keychat-cli"
version = "0.2.0"
edition = "2021"
description = "Keychat unified CLI — interactive REPL and HTTP daemon modes"

[lib]
name = "keychat_cli"
path = "src/lib.rs"

[[bin]]
name = "keychat"
path = "src/main.rs"

[dependencies]
keychat-app-core = { path = "../keychat-app-core" }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
axum = "0.8"
rustyline = "14"
colored = "2"
chrono = "0.4"
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# keyring crate removed — uses system CLI (security/secret-tool) via keychain.rs instead
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
qrcode = "0.14"
open = "5"

[dev-dependencies]
keychat-uniffi = { path = "../keychat-uniffi" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
