[package]
name = "keychat-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"] }
libkeychat = { path = "../libkeychat", features = ["storage", "mls"] }
nostr = "0.37"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
