[package]
name = "keychat-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
keychat-app-sdk = { path = "../keychat-app-sdk", features = ["uniffi-export"] }
uniffi = { version = "0.28", features = ["cli", "tokio"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
