[package]
name = "keychat-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"] }
keychat-app-core = { path = "../keychat-app-core" }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
