[package]
name = "keychat-wallet-uniffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for keychat-wallet — exposes the unified wallet API to Swift/Kotlin"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"] }
keychat-wallet = { path = "../keychat-wallet" }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
