[package]
name = "keychat-wallet"
version = "0.1.0"
edition = "2021"
description = "Keychat ecash wallet — extensible multi-protocol wallet (Cashu first, Ark later)"
license = "MIT"

[dependencies]
# CDK (Cashu Development Kit)
cdk        = { workspace = true }
cdk-common = { workspace = true }
cdk-sqlite = { workspace = true }

# Key derivation
bip39   = { workspace = true }
bitcoin = { workspace = true }

# Async
tokio      = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Error / logging
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
