[package]
name = "libkeychat"
version = "0.1.0"
edition = "2021"
description = "Keychat Protocol v2 - Identity, Transport, Signal Sessions, Friend Request Flow"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["mls", "storage", "cashu"]
mls = ["dep:openmls", "dep:openmls_traits", "dep:openmls_basic_credential", "dep:openmls_rust_crypto", "dep:openmls_sqlite_storage", "dep:tls_codec", "dep:keccak"]
storage = ["dep:rusqlite"]
cashu = ["dep:cdk", "dep:cdk-common"]

[dependencies]
# Nostr
nostr = { version = "0.37", features = ["nip44", "nip06"] }
nostr-sdk = "0.37"

# Identity / crypto
bip39 = { version = "2", features = ["rand"] }
bitcoin = { version = "0.32", features = ["rand-std"] }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }

# AES-256-CTR for media file encryption (§12.1)
aes = "0.8"
ctr = "0.9"

# NIP-44 crypto primitives (used by nostr crate internally, we also need direct access)
chacha20 = "0.9"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"


# Signal Protocol (official signalapp/libsignal v0.88.3)
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.88.3" }

# Protobuf decoding — extract ratchet keys from SessionRecord
# (official libsignal doesn't expose them via public API)
prost = "0.14"

# Signal key generation (Curve25519) - also used by our own key utils
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["digest"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Post-quantum KEM (ML-KEM 1024 / Kyber)
# Must match libsignal-protocol's pqcrypto-kyber version
pqcrypto-kyber = { version = "0.7.6", default-features = false, features = ["std"] }
pqcrypto-traits = "0.3"

# MLS (RFC 9420) — Official OpenMLS v0.8.1
openmls = { version = "0.8.1", optional = true }
openmls_traits = { version = "0.5.0", optional = true }
openmls_basic_credential = { version = "0.5.0", optional = true }
openmls_rust_crypto = { version = "0.5.1", optional = true }
openmls_sqlite_storage = { version = "0.2.0", optional = true }
tls_codec = { version = "0.4", features = ["derive", "serde"], optional = true }
# Pin keccak to pre-release matching sha3 0.11.0-rc.8's requirement
keccak = { version = "=0.2.0-rc.2", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for NIP-11 relay info fetching)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Cashu Development Kit (ecash wallet for stamps)
cdk = { version = "0.15.1", default-features = false, features = ["wallet"], optional = true }
cdk-common = { version = "0.15.1", default-features = false, optional = true }

# Utilities
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"], optional = true }
hex = "0.4"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
